fixed bug on model prediction introduced in v0.1.2 with the RegionST update

--- a/nbs/01_data.ipynb
+++ b/nbs/01_data.ipynb
@@ -61,7 +61,7 @@
     "    \"Defines a region in space and time with a name, a bounding box and the pixel size.\"\n",
     "    def __init__(self, name:str, bbox:list, pixel_size:float=None, scale_meters:int=None,\n",
     "                 time_start:str=None, time_end:str=None, time_freq:str='D', time_margin:int=0,\n",
-    "                 shape:tuple=None):\n",
+    "                 shape:tuple=None, epsg=4326):\n",
     "        if scale_meters is not None and pixel_size is not None: \n",
     "            raise Exception('Either pixel_size or scale_meters must be set to None.')\n",
     "        self.name = name\n",
@@ -70,6 +70,7 @@
     "            self.pixel_size = pixel_size\n",
     "        else:\n",
     "            self.pixel_size = scale_meters/111000\n",
+    "        self.epsg         = epsg\n",
     "        self.scale_meters = scale_meters\n",
     "        self._shape       = shape\n",
     "        self.time_start   = pd.Timestamp(str(time_start))\n",
@@ -451,7 +452,7 @@
     "                   coarse_mask_doy_layer=2, products=['COPERNICUS/S2'], \n",
     "                   bands=['B4', 'B8', 'B12'], scale_factor=1e-4, composite_days=[60,60],\n",
     "                   max_cloud_fraction=None, use_least_cloudy=None, scale=10,\n",
-    "                   topography=False):\n",
+    "                   topography=False, banet_pixel_size=0.001):\n",
     "    rst_ba100 = open_tif(coarse_mask_file)\n",
     "    doys = rst_ba100.read(coarse_mask_doy_layer).astype(np.float16)\n",
     "    doys[doys==0] = np.nan\n",
@@ -463,6 +464,7 @@
     "    print('Event time_end:', str(time_end))\n",
     "    R = RegionST(event_id, list(rst_ba100.bounds), scale_meters=scale, \n",
     "                 time_start=time_start, time_end=time_end, time_margin=1)\n",
+    "    R_banet = R.new(pixel_size=banet_pixel_size)\n",
     "    before = (R.times[0]-pd.Timedelta(days=composite_days[0]), R.times[0])\n",
     "    after  = (R.times[-1], R.times[-1]+pd.Timedelta(days=composite_days[1]))\n",
     "    for mode, time_window in zip(['before', 'after'], [before, after]):\n",
@@ -484,7 +486,7 @@
     "        [rasterio.open(str(f)).read() for f in s10before_files]).astype(np.float16)*scale_factor\n",
     "    rst_s10after = np.concatenate(\n",
     "        [rasterio.open(str(f)).read() for f in s10after_files]).astype(np.float16)*scale_factor\n",
-    "    rst_ba100 = downsample(rst_ba100, src_tfm=R.transform, dst_tfm=transform, \n",
+    "    rst_ba100 = downsample(rst_ba100, src_tfm=R_banet.transform, dst_tfm=transform, \n",
     "                          dst_shape=(1, *rst_s10before.shape[-2:]), resampling='bilinear').astype(np.float32)\n",
     "    im = np.concatenate([rst_s10before, rst_s10after, rst_ba100], axis=0).transpose(1,2,0)\n",
     "    return im, transform, crs"
