--- a/nbs/03_predict.ipynb
+++ b/nbs/03_predict.ipynb
@@ -40,6 +40,7 @@
     "import rasterio\n",
     "import matplotlib.pyplot as plt\n",
     "from pathlib import Path\n",
+    "from IPython.core.debugger import set_trace\n",
     "from fastprogress import progress_bar\n",
     "from banet.predict import image2tiles, tiles2image\n",
     "from rasterio.crs import CRS\n",
@@ -99,6 +100,7 @@
       "Event time_end: 2020-09-11 00:00:00\n",
       "Downloading GEE median composite for: 2020-03-06 00:00:00 to 2020-05-05 00:00:00\n",
       "Downloading GEE median composite for: 2020-09-12 00:00:00 to 2020-11-11 00:00:00\n",
+      "Using local model weights /home/mnpinto/.firehr/model512.pth\n",
       "Generating model predicitons...\n"
      ]
     },
@@ -155,19 +157,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Converted 01_data.ipynb.\n",
-      "Converted 02_models.ipynb.\n",
-      "Converted 03_predict.ipynb.\n",
-      "Converted 04_cli.ipynb.\n",
-      "Converted index.ipynb.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#hide\n",
     "notebook2script()"
