--- a/nbs/04_cli.ipynb
+++ b/nbs/04_cli.ipynb
@@ -59,19 +59,23 @@
     "        max_cloud_fraction:Param(\"Maximum fraction of cloud pixels\",float)=None,\n",
     "        use_least_cloudy:Param(\"Number of least cloudy images to use\",int)=None,\n",
     "        topography:Param(\"Download also topography for the event region\",bool)=False,\n",
-    "        skip_preds:Param(\"Skip computation of high resolution burned area\", bool)=False):\n",
+    "        skip_preds:Param(\"Skip computation of high resolution burned area\", bool)=False,\n",
+    "        replace_preds:Param(\"If set to True, model preds will be recomputed\",bool)=False):\n",
     "    path = Path(path)\n",
     "    path.mkdir(exist_ok=True, parents=True)\n",
     "    event_id = '_'.join(Path(file).stem.split('_')[1:])\n",
     "    year = int(re.findall('(\\d{4})', Path(file).stem.split('_')[1])[0])\n",
     "    if topography in [True, 'true', 'True', 'TRUE']: topography = True\n",
+    "    if skip_preds in [True, 'true', 'True', 'TRUE']: skip_preds = True\n",
+    "    if replace_preds in [True, 'true', 'True', 'TRUE']: replace_preds = True\n",
     "    im, transform, crs = get_event_data(\n",
     "        event_id, year, file, composite_days=[composite_days_before,composite_days_after],\n",
     "        max_cloud_fraction=max_cloud_fraction, use_least_cloudy=use_least_cloudy, path=path,\n",
     "        topography=topography)\n",
     "    if not skip_preds:\n",
-    "        preds = get_preds(im, gpu=False)\n",
-    "        save_data(path/f'{event_id}/firehr_{event_id}.tif', (preds*255).astype(np.uint8), crs=crs, transform=transform)"
+    "        if not (path/f'{event_id}/firehr_{event_id}.tif').is_file() or replace_preds:\n",
+    "            preds = get_preds(im, gpu=False)\n",
+    "            save_data(path/f'{event_id}/firehr_{event_id}.tif', (preds*255).astype(np.uint8), crs=crs, transform=transform)"
    ]
   },
   {
@@ -95,6 +99,13 @@
     "#hide\n",
     "notebook2script()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
