--- a/nbs/01_data.ipynb
+++ b/nbs/01_data.ipynb
@@ -102,7 +102,7 @@
     "        if time_end is None:\n",
     "            time_end = args['time_end']\n",
     "        return cls(args['name'], args['bbox'], args['pixel_size'],\n",
-    "                   time_start, time_end)\n",
+    "                   time_start=time_start, time_end=time_end)\n",
     "    \n",
     "def extract_region(df_row, cls=Region):\n",
     "    \"Create Region object from a row of the metadata dataframe.\"\n",
