--- a/nbs/03_predict.ipynb
+++ b/nbs/03_predict.ipynb
@@ -56,9 +56,8 @@
    "outputs": [],
    "source": [
     "#export\n",
-    "def get_preds(im, thr=0.5, tile_size=2048, tile_step=2000, max_image_size=2048, \n",
+    "def get_preds(im, thr=0.5, tile_size=2048, tile_step=2000, max_image_size=2048,\n",
     "              coarse_mask_expansion_size=101, gpu=True):\n",
-    "    if not gpu: max_image_size=10000\n",
     "    image_size = im.shape[:2]\n",
     "    if max(image_size) < max_image_size:\n",
     "        im = torch.from_numpy(im)[None].permute(0,3,1,2).float()\n",
@@ -157,7 +156,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Converted 01_data.ipynb.\n",
+      "Converted 02_models.ipynb.\n",
+      "Converted 03_predict.ipynb.\n",
+      "Converted 04_cli.ipynb.\n",
+      "Converted index.ipynb.\n"
+     ]
+    }
+   ],
    "source": [
     "#hide\n",
     "notebook2script()"
