--- a/nbs/04_cli.ipynb
+++ b/nbs/04_cli.ipynb
@@ -37,6 +37,7 @@
     "from pathlib import Path\n",
     "import re\n",
     "import numpy as np\n",
+    "from warnings import warn\n",
     "from fastscript import *\n",
     "from fire_split.core import save_data\n",
     "from FireHR.data import get_event_data\n",
@@ -52,15 +53,17 @@
     "#export\n",
     "@call_parse\n",
     "def firehr_from_banet_events(\n",
-    "        file:Param(\"BA-Net event tif file\",str), \n",
+    "        file:Param(\"BA-Net event tif file\",str),\n",
     "        path:Param(\"Path to save outputs\",str)='.',\n",
     "        composite_days_before:Param(\"Time window for composite before fire\",int)=120,\n",
     "        composite_days_after:Param(\"Time window for composite after fire\",int)=120,\n",
     "        max_cloud_fraction:Param(\"Maximum fraction of cloud pixels\",float)=None,\n",
+    "        max_image_size:Param(\"Split images larger than max_image_size\",int)=2048,\n",
     "        use_least_cloudy:Param(\"Number of least cloudy images to use\",int)=None,\n",
     "        topography:Param(\"Download also topography for the event region\",bool)=False,\n",
     "        skip_preds:Param(\"Skip computation of high resolution burned area\", bool)=False,\n",
-    "        replace_preds:Param(\"If set to True, model preds will be recomputed\",bool)=False):\n",
+    "        replace_preds:Param(\"If set to True, model preds will be recomputed\",bool)=False,\n",
+    "        warnings:Param(\"Pring warnings\")=True):\n",
     "    path = Path(path)\n",
     "    path.mkdir(exist_ok=True, parents=True)\n",
     "    event_id = '_'.join(Path(file).stem.split('_')[1:])\n",
@@ -68,14 +71,19 @@
     "    if topography in [True, 'true', 'True', 'TRUE']: topography = True\n",
     "    if skip_preds in [True, 'true', 'True', 'TRUE']: skip_preds = True\n",
     "    if replace_preds in [True, 'true', 'True', 'TRUE']: replace_preds = True\n",
-    "    im, transform, crs = get_event_data(\n",
-    "        event_id, year, file, composite_days=[composite_days_before,composite_days_after],\n",
-    "        max_cloud_fraction=max_cloud_fraction, use_least_cloudy=use_least_cloudy, path=path,\n",
-    "        topography=topography)\n",
-    "    if not skip_preds:\n",
-    "        if not (path/f'{event_id}/firehr_{event_id}.tif').is_file() or replace_preds:\n",
-    "            preds = get_preds(im, gpu=False)\n",
-    "            save_data(path/f'{event_id}/firehr_{event_id}.tif', (preds*255).astype(np.uint8), crs=crs, transform=transform)"
+    "    if warnings in [False, 'false', 'False', 'FALSE']: warnings = False\n",
+    "    if not (path/f'{event_id}/firehr_{event_id}.tif').is_file() or replace_preds:\n",
+    "        im, transform, crs = get_event_data(\n",
+    "            event_id, year, file, composite_days=[composite_days_before,composite_days_after],\n",
+    "            max_cloud_fraction=max_cloud_fraction, use_least_cloudy=use_least_cloudy, path=path,\n",
+    "            topography=topography)\n",
+    "        if not skip_preds:\n",
+    "            preds = get_preds(im, gpu=False, max_image_size=max_image_size)\n",
+    "            save_data(path/f'{event_id}/firehr_{event_id}.tif', (preds*255).astype(np.uint8), crs=crs, transform=transform)\n",
+    "    else:\n",
+    "        if warnings:\n",
+    "            s = (path/f'{event_id}/firehr_{event_id}.tif')\n",
+    "            warn(f'{s} already exists. If you want to recompute preds set replace_preds to True.')"
    ]
   },
   {
